# paper-Phase

./: .gitignore  MIGRATION_NOTES.md  README.md  REPRODUCIBILITY.md  environment.yml  pyproject.toml  requirements.txt
baselines/: __init__.py  _base_adapter.py  bc_act_adapter.py  diffusion_policy_adapter.py  openvla_adapter.py  pi0_adapter.py
configs/: finetune_closedloop.yaml  pretrain_multimodal.yaml  train_flow.yaml  train_latent.yaml
docs/: ARCHITECTURE.md  EXPERIMENT_RUNBOOK.md  OPERATIONS_GUIDE.md  PROJECT_ABSTRACT.md
lerobot_policy_phaseqflow/: pyproject.toml
lerobot_policy_phaseqflow/src/lerobot_policy_phaseqflow/: __init__.py  bid_sampler.py  configuration_phaseqflow.py  modeling_phaseqflow.py  processor_pc_vla.py  processor_steps_phaseqflow.py  temporal_ensembler.py  training_utils.py
lerobot_policy_phaseqflow/src/lerobot_policy_phaseqflow/inference/: __init__.py  cliff_estimators.py  concordance.py
lerobot_policy_phaseqflow/src/lerobot_policy_phaseqflow/phase_centric/: __init__.py  _pcar_common.py  b_pcar.py  boundary_aware_flow.py  cliff_estimators.py  identifiability.py  pace_a_loss.py  pace_b_moe.py  pace_c_curriculum.py  pcar_trigger.py  phase_posterior.py  theory_utils.py
lerobot_policy_phaseqflow/src/lerobot_policy_phaseqflow/phase_centric/cliff_detection/: __init__.py  concordance.py  policy_variance.py  posterior_bhattacharyya.py  velocity_curvature.py
lerobot_policy_phaseqflow/src/lerobot_policy_phaseqflow/utils/: __init__.py  checkpoint_manager.py  diagnostic_logger.py
paper_figures/: ablation_table.tex
scripts/: run_experiments.sh  (+5 more)
(+112 files in other folders)
